# yrmos

./: .gitattributes  .gitignore  .gitmodules  .hydra.json  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  build.rs  caronas.html  default.nix  flake.nix  gemset.nix  model.uml  module.nix  shell.nix  sqlx-data.json
assets/icons/: bookmark_remove
assets/scss/: style.scss
db/: 0.1.0.sql  0.1.1.sql
nix/: default.nix  module.nix  shell.nix  vm.nix
scss/: style.scss
src/: 404.md  add_ride.html  config.rs  errors.rs  index.html  lib.rs  main.rs  profile.html  ride.html  rides.html  state.rs  style.rs
src/_includes/: nav.html  ride.html  ride_listing.html
src/_layouts/: default.html
src/_sass/: main.scss
src/common/: config.rs  errors.rs  files.rs  icons.rs  layouts.rs  mod.rs  state.rs  style.rs  version.rs
src/profiles/: ellian-carlos.html  index.html
src/rides/: add.html  bb7f8fd8.html  index.html
src/routes/: login.rs  logout.rs  mod.rs  register.rs  rides.rs
src/schema/: mod.rs  person.rs  ride.rs  rider.rs  session.rs
