[package]
name = "yrmos"
version = "0.1.1"
description = "MVP do sistema Yrmos"
authors = [ "Gabriel Fontes <hi@m7.rs>"]
license = "MIT"
homepage = "https://github.com/Misterio77/Yrmos"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.axum]
version = "0.6"
features = [ "query" ]

[dependencies.axum-extra]
version = "0.4"
features = [ "cookie-signed" ]

[dependencies.maud]
git = "https://github.com/davidpdrsn/maud"
branch = "axum-core-0.3.0"
features = [ "axum" ]

[dependencies.sqlx]
version = "0.6"
features = [ "runtime-tokio-rustls", "postgres", "decimal", "uuid", "offline", "chrono", "ipnetwork" ]

[dependencies.rust_decimal]
version = "1.27"

[dependencies.uuid]
version = "1.2"
features = [ "v4", "fast-rng", "serde" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.chrono-humanize]
git = "https://gitlab.com/misterio77/chrono-humanize-rs"
branch = "develop"

[dependencies.tokio]
version = "1.23"
features = [ "full" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.clap]
version = "4.0"
features = [ "derive", "env" ]

[dependencies.hyper]
version = "0.14"

[dependencies.thiserror]
version = "1.0"

[dependencies.simple_logger]
version = "4.0"

[dependencies.log]
version = "0.4"
features = [ "std", "serde" ]

[dependencies.async-trait]
version = "0.1"

[dependencies.rand]
version = "0.8"

[dependencies.rust-argon2]
version = "1.0"

[dependencies.crc]
version = "3.0"

[dependencies.unidecode]
version = "0.3"

[build-dependencies.grass]
version = "0.11"
default-features = false
features = [ "rand" ]

[build-dependencies.blake3]
version = "1.3"
